# QC_application

./: .gitignore  BUILD_WINDOWS.md  COMMIT_AND_REBUILD.sh  FIX_AND_PUSH.sh  GET_WINDOWS_EXE.md  GITHUB_BUILD_FIX.md  GITHUB_REBUILD_GUIDE.md  HOW_TO_OPEN_DEVTOOLS.md  QC of Retouch_V1.4.py  QUICK_BUILD_GUIDE.md  README.md  README_BUILD.md  SETUP_GITHUB.sh  WINDOWS_BUILD_SOLUTION.md  WINDOWS_ISSUES_FIX.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  main.rs
src/components/Analytics/: AnalyticsDashboard.tsx  DailyValidationChart.tsx  NextActionDistribution.tsx  ObservationPatterns.tsx  SessionStats.tsx  ValidationSpeedChart.tsx
src/components/CustomCardPanel/: CustomCardPanel.css  CustomCardPanel.tsx
src/components/GridLayout/: SimpleLayoutManager.css  SimpleLayoutManager.tsx
src/components/ImageViewer/: ImageViewer.css  ImageViewer.tsx
src/components/NavigationBar/: NavigationBar.css  NavigationBar.tsx
src/components/NewStructureWizard/: NewStructureWizard.css  NewStructureWizard.tsx
src/components/NextActionPanel/: NextActionPanel.css  NextActionPanel.tsx
src/components/PanelBuilder/: PanelBuilder.css  (+1 more)
src/hooks/: useAppInitialization.ts  useColorTheme.ts  useShortcuts.ts
src/services/: csvService.ts  databaseService.ts  fileUtils.ts  stateService.ts
src/store/: appStore.ts
src/styles/: glass-effect.css
src/types/: index.ts
(+23 files in other folders)
